feat: add translate personal user books
